syntax = "proto3";

package com.solidice.springbootrsocketserver.rpc.proto;

option java_outer_classname = "UserServiceProto";
option java_multiple_files = true;

message User {
    int32 id = 1;
    string email = 2;
    string username = 3;
}

message GetUserByIdRequest {
    int32 userId = 1;
}

message GetUserByIdResponse {
    User user = 1;
}

service UserService {
    rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse) {}
}
